--- a/views/login/index.handlebars
+++ b/views/login/index.handlebars
@@ -1,6 +1,5 @@
-<header>
-  <h1>Login</h1>
-  <hr class="small">
+<header class="intro-header">
+  <h3>Login</h3>
   <span class="subheading"><i id="header-logo" class="material-icons">data_usage</i></span>
 </header>
 
