--- a/views/deposit/initial/index.handlebars
+++ b/views/deposit/initial/index.handlebars
@@ -1,6 +1,5 @@
-<header>
-  <h1>Login</h1>
-  <hr class="small">
+<header class="intro-header">
+  <h3>Login</h3>
   <span class="subheading"><i id="header-logo" class="material-icons">data_usage</i></span>
 </header>
 
@@ -11,7 +10,7 @@
         <div class="alert alert-danger">{{this.error}}</div>
       {{/if}}
       
-      <h1>A minimum of $200 must be deposited in order to join weDev</h1>
+      <h5 class="center-align red-text">A minimum of $200 must be deposited in order to join weDev</h5>
  
       <form name="deposit" action="/deposit" method="post">
         <div class="row control-group">
