--- a/views/sign-up/index.handlebars
+++ b/views/sign-up/index.handlebars
@@ -1,15 +1,6 @@
-<header class="sign-up-header">
-{{!--   <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <div class="page-heading"> --}}
-          <h1>Sign Up</h1>
-          <hr class="small">
+<header class="intro-header">
+          <h3>Sign Up</h3>
           <span class="subheading">Join our Turk System!</span>
-{{!--         </div>
-      </div>
-    </div>
-  </div> --}}
 </header>
 
 <div class="container">
