--- a/views/users/single/index.handlebars
+++ b/views/users/single/index.handlebars
@@ -11,6 +11,7 @@
   </div>
 </header>
 
+<main>
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -41,4 +42,5 @@
     </div>
   </div>
 </div>
+</main>
 
