--- a/views/posts/single/index.handlebars
+++ b/views/posts/single/index.handlebars
@@ -28,6 +28,10 @@
         <div class="update-post">
           <a class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/edit">Update post </a>
         </div>
+
+        <div class="update-post">
+          <a class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/reviewWinner">Choose Winner</a>
+        </div>
       {{/if}}
     </div> 
   </div>
