--- a/views/sign-up/index.handlebars
+++ b/views/sign-up/index.handlebars
@@ -70,10 +70,11 @@
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Password</label>
-            <input type="password" class="form-control" name="password" required data-validation-required-message="Please enter your password.">
+            <input type="password" id="password" class="form-control" name="password" required data-validation-required-message="Please enter your password.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
+        
         <br>
         <div class="row">
           <div class="form-group col-xs-12">
