--- a/views/profile/index.handlebars
+++ b/views/profile/index.handlebars
@@ -5,7 +5,7 @@
         <div class="page-heading">
           <h3>{{user.username}}</h3>
           <hr class="small">
-          <span class="subheading">{{user.firstName}} {{user.lastName}}</span>
+          <span class="subheading">{{profile.firstName}} {{profile.lastName}}</span>
         </div>
       </div>
     </div>
@@ -31,6 +31,12 @@
       <p>Company:
         {{profile.companyInfo}}
       </p>
+      {{/if}}
+
+      {{#if owner}}
+        <div class="update-post">
+          <a class="btn btn-default" href="/profile/edit">Update profile </a>
+        </div>
       {{/if}}
 
     </div>
