--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -21,7 +21,7 @@
                   <div class="row">
                       <div class="row">
                         <div class="input-field col s12">
-                          <input id="username" type="text" class="validate" required="" aria-required="true">
+                          <input name="username" id="username" type="text" class="validate" required="" aria-required="true">
                           <label for="username" data-error="wrong" data-success="right">Username</label>
                         </div>
                   <div class="row">
@@ -35,13 +35,13 @@
                 </div>
                       <div class="row">
                         <div class="input-field col s12">
-                          <input id="email" type="email" class="validate" required="" aria-required="true">
+                          <input name ="email" id="email" type="email" class="validate" required="" aria-required="true">
                           <label for="email" data-error="wrong" data-success="right">Email</label>
                         </div>
                       </div>
                       <div class="row">
                         <div class="input-field col s12">
-                          <input id="password" type="password" value="password" required="">
+                          <input name ="password" id="password" type="password" value="password" required="">
                           <label for="password" data-error="wrong" data-success="right">Password</label>
                         </div>
                       </div>
