poster can now click on biders

--- a/views/posts/new-post/index.handlebars
+++ b/views/posts/new-post/index.handlebars
@@ -90,6 +90,7 @@ $(document).ready(function(){
   $('.chips').on('chip.add', function(e, chip){
       // alert("You Have added chip");
      });
+   $('.chips-initial').material_chip('data');
 });
   
 </script>
