--- a/views/posts/review/index.handlebars
+++ b/views/posts/review/index.handlebars
@@ -22,11 +22,10 @@
       
 
       <ul id="myUL">  
-        
-        
+      {{cur_user.username}}
       {{#each bids}}
-        <li>
-          <a href="/profile/{{this.user.username}}">
+        <li>here      {{cur_user.username}}
+          <input type="button" name="theButton" value="Detail" onclick="myButton('{{this.user.username}}');">
               <h7 class="col s4">{{this.user.username}}</h7>
               <span class="new badge red" data-badge-caption="&nbsp;{{this.price}} &nbsp"></span>
 
@@ -45,6 +44,14 @@
   </div>
 </div>
 <script>
+function myButton(winningUser)
+{
+  var x = document.URL;
+   window.location = x +'/'+ winningUser;
+}
+
+
+
 function myFunction() {
     var input, filter, ul, li, a, i;
     input = document.getElementById("myInput");
