--- a/views/posts/review/winner/index.handlebars
+++ b/views/posts/review/winner/index.handlebars
@@ -21,20 +21,43 @@
       <p>{{post.body}}</p>
       {{#if isCheapestBid}}
         <h1>IT IS THE CHEAPEST ok</h1>
+        <form name="create-workOrder" action="/posts/{{user.username}}/{{post.slug}}/selectWinner/{{winningUser.username}}" method="post">
+          
+          <input type="hidden" name="comment" value="It is the cheapest bid">
+          <input type="hidden" name="confirmed" value="true">
+          <input type="hidden" name="userId" value="{{winningUser.id}}">
+          <input type="hidden" name="postId" value="{{post.id}}">
+          
+          <br>
+          <div class="row">
+            <div class="form-group col-xs-12">
+                <button type="submit" class="btn btn-default">Confirm</button>
+            </div>
+          </div>
+        </form>
       {{else}}
         <h1>NOT THE CHEAPEST ok</h1>
-      {{/if}}
+        <form name="create-workOrder" action="/posts/{{user.username}}/{{post.slug}}/selectWinner/{{winningUser.username}}" method="post">
+          <div class="row control-group">
+            <div class="form-group col-xs-12 floating-label-form-group controls">
+              <label>Please add a Comment</label>
+              <input type="text" class="form-control" placeholder="Why wasn't the lowest Bid Choosen?" name="comment" required>
+              <p class="help-block text-danger"></p>
+            </div>
+          </div>
 
-      {{#if developer}}
-        <div class="create-post">
-          <a class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/new-bid">Create a bid </a>
-        </div>
-      {{/if}}
-      {{#if owner}}
-        <div class="update-post">
-          <a id="btn" class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/edit">Update post </a>
-        </div>
-
+          
+          <input type="hidden" name="confirmed" value="false">
+          <input type="hidden" name="userId" value="{{winningUser.id}}">
+          <input type="hidden" name="postId" value="{{post.id}}">
+          
+          <br>
+          <div class="row">
+            <div class="form-group col-xs-12">
+                <button type="submit" class="btn btn-default">Confirm</button>
+            </div>
+          </div>
+        </form>
       {{/if}}
     </div> 
   </div>
