--- a/views/posts/review/winner/index.handlebars
+++ b/views/posts/review/winner/index.handlebars
@@ -47,7 +47,7 @@
           </div>
 
           
-          <input type="hidden" name="confirmed" value="true">
+          <input type="hidden" name="confirmed" value="false">
           <input type="hidden" name="userId" value="{{winningUser.id}}">
           <input type="hidden" name="postId" value="{{post.id}}">
           
