--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -77,9 +77,9 @@
   <header></header>
   <main></main>
 
-
+<div class="footer-wrapper">
         <footer class="page-footer blue darken-2">
-          <div class="container">
+{{!--           <div class="container">
             <div class="row">
               <div class="col l6 s12">
                 <h5 class="white-text">weDev</h5>
@@ -92,13 +92,18 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> --}}
+{{!--           <div class="container"> --}}
+{{!--             <h5 class="white-text">weDev</h5>
+            <p class="grey-text text-lighten-4">Achieve success</p> --}}
+{{!--           </div> --}}
           <div class="footer-copyright blue darken-3">
             <div class="container">
             © 2017 Stark Labs
             </div>
           </div>
         </footer>
+</div>
 {{!--   // <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
   // <script src="/js/jqBootstrapValidation.js"></script>
   // <script src="/js/contact_me.js"></script>
