Any developer or client who received average rating is <=2 for >=5 projects is warned due to poor performance; any user whose average rating to others is <2 (too low) or >4 for >=8 (too high) project is also warned for irresponsible evaluations. Warned users can send protesting message to the super-user, and the super-user can keep or remove the warning. Any user who is warned twice is thrown out of the system: s/he can login for one last time for system closing matters then the account is closed forever. The user can still protest for super-user to reverse this action. All thrown-out users will be put in a black list who cannot register in the next one year.

--- a/views/deposit/initial/index.handlebars
+++ b/views/deposit/initial/index.handlebars
@@ -20,11 +20,11 @@
     </div>
     <p>
       <input type="number" onkeyup="money()" name="amountDeposited" class="checkout-input checkout-name" placeholder="200" id="deposit" min="200" step="1.0" autofocus required>
-      <input type="date" name="expirationDate" class="checkout-input checkout-exp" required data-validation-required-message="Please enter expiration date.">
+      <input type="date" id="datefield" name="expirationDate" class="checkout-input checkout-exp" required data-validation-required-message="Please enter expiration date.">
       <input type="text" name="zipCode" class="checkout-input checkout-exp" maxlength="5" placeholder="Zip Code" required data-validation-required-message="Please enter zip code.">
     </p>
     <p>
-      <input type="text" name="creditCardNumber" class="checkout-input checkout-card" maxlength="16" placeholder="4111 1111 1111 1111" data-validation-required-message="Please enter the credit card number." required>
+      <input type="text" onkeydown="creditCard()" name="creditCardNumber" id ="creditCard" class="checkout-input checkout-card" maxlength="16" placeholder="4111 1111 1111 1111" data-validation-required-message="Please enter the credit card number." required>
       <input type="text" name="cvv" class="checkout-input checkout-cvc" maxlength="3" data-validation-required-message="Please enter the amount." placeholder="CVV" required>
     </p>
     <p>
@@ -49,6 +49,19 @@
         document.getElementById("checkout").innerHTML = (curValue/1000).toFixed(0) +"K";
       else
         document.getElementById("checkout").innerHTML = (curValue/1000).toFixed(1) +"K";
-
   }
+
+  var today = new Date();
+  var dd = today.getDate();
+  var mm = today.getMonth()+1;
+  var yyyy = today.getFullYear();
+   if(dd<10){
+          dd='0'+dd
+      } 
+      if(mm<10){
+          mm='0'+mm
+      } 
+
+  today = yyyy+'-'+mm+'-'+dd;
+  document.getElementById("datefield").setAttribute("min", today);
 </script>
