--- a/views/deposit/add/index.handlebars
+++ b/views/deposit/add/index.handlebars
@@ -1,5 +1,5 @@
-<header>
-  <h1>Add Money</h1>
+<header class="intro-header">
+  <h3>Add Money</h3>
   <hr class="small">
   <span class="subheading"><i id="header-logo" class="material-icons">data_usage</i></span>
 </header>
@@ -11,7 +11,7 @@
         <div class="alert alert-danger">{{this.error}}</div>
       {{/if}}
       
-      <h1>Total ammount in your wallet: {{balance}}</h1>
+      <h5 class="center-align">Total amount in your wallet: {{balance}}</h5>
  
       <form name="deposit" action="/deposit/add?_method=PUT" method="POST">
         <div class="row control-group">
@@ -24,7 +24,7 @@
 
         <div class="row">
           <div class="form-group col-xs-12">
-              <button type="submit" class="btn">Login</button>
+              <button type="submit" class="btn">Deposit</button>
           </div>
         </div>
       </form>
